--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^2.0.1",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.8.1"
   }
 }
